tests/baselines/reference/parserClassDeclaration20(strict=true).errors.txt
parserClassDeclaration20.ts(2,5): error TS7010: '0', which lacks return-type annotation, implicitly has an 'any' return type.


==== parserClassDeclaration20.ts (1 errors) ====
    class C {
        0();
        ~
!!! error TS7010: '0', which lacks return-type annotation, implicitly has an 'any' return type.
        "0"() { }
    }